--- a/css/main.css
+++ b/css/main.css
@@ -104,7 +104,7 @@ img[src*=transparent] {display: block;width: 0;height: 0;font-size: 0;opacity: 0
 .recruit strong {display: block;margin-bottom: 20px;font-size: 34px;}
 .recruit p {font-size: 20px;margin-bottom: 50px;}
 .recruit .recruit_area {position: relative;box-sizing:border-box;padding-top: 50%;border: 3px solid #099;background: #FFF;}
-.recruit .recruit_area h3 {position: absolute;left: -3%;top: -11%;width: 42.59259259%;padding-top: 11%;background: #099;color: #FFF;}
+.recruit .recruit_area h3 {position: absolute;left: -3%;top: -11%;width: 180px;height: 50px;background: #099;color: #FFF;}
 .recruit .recruit_area h3 span {position: absolute;left: 50%;top: 50%;transform:translate(-50%, -50%);white-space: nowrap;font-size: 20px;line-height: 20px;}
 .recruit .recruit_area ul {display: flex;flex-flow:row wrap;align-content: space-around;position: absolute;top: 14%;bottom: 14%;left: 0;right: 0;}
 .recruit .recruit_area ul li {display: flex;width: 33.33%;justify-content:center;align-items:center;font-size: 18px;}
@@ -359,7 +359,7 @@ img[src*=transparent] {display: block;width: 0;height: 0;font-size: 0;opacity: 0
   .manage_wrap .slick-dots {bottom: 40px;}
 
   .recruit_wrap {padding-top: 150%;background-image: url(../img/m_incruit_bg.jpg);background-repeat: no-repeat;background-size: cover;background-position: left top;}
-  .recruit strong {margin-bottom: 80px;font-size: 34px;}
+  .recruit strong {margin-bottom: 60px;font-size: 34px;}
   .recruit p {display: none;}
   .recruit h3 span {font-size: 20px;line-height: 20px;}
 }
