--- a/css/main.css
+++ b/css/main.css
@@ -30,7 +30,7 @@ img[src*=transparent] {display: block;width: 0;height: 0;font-size: 0;opacity: 0
 
 /* header */
 #gnb b {font-weight: bold}
-#header {position: absolute;left: 0;right: 0;z-index: 99;}
+#header {position: absolute;top: 0;left: 0;right: 0;z-index: 99;}
 #header .search_btn {background-image: url(../img/sprite.png)}
 #header h1 {float: left;}
 #header .util {float: right;}
@@ -98,6 +98,9 @@ img[src*=transparent] {display: block;width: 0;height: 0;font-size: 0;opacity: 0
 .manage_wrap .slick-dots button {width: 10px;height: 10px;border-radius:50%;background: #CCC;}
 .manage_wrap .slick-dots .slick-active button {background: #099}
 
+.manage_wrap .slick-prev:hover {background-position: -200px -144px;}
+.manage_wrap .slick-next:hover {background-position: -200px -96px;}
+
 .recruit_wrap {position: relative;background-image: url(../img/m_incruit_bg.jpg);background-repeat: no-repeat;background-size: cover;background-position: left top;}
 .recruit_wrap .recruit {position: absolute;top: 36px;left: 5%;right: 5%;}
 .recruit p, .recruit strong {text-shadow: 0 1px 8px #000;color: #FFF;}
@@ -155,9 +158,17 @@ img[src*=transparent] {display: block;width: 0;height: 0;font-size: 0;opacity: 0
   #header .pc_lang_area li a {display: block;margin-top: 0;line-height: 26px;text-align: center;}
   #header nav {display: inline-block;}
   
-  #gnb {display: inline-block;}
+  #gnb {display: inline-block;color: #FFF;}
   #gnb li {float: left;}
-  #gnb li>a {display: block;width: 160px;line-height: 80px;color: #FFF;}
+  #gnb li>a {display: block;width: 160px;line-height: 80px;}
+
+  #header .gnb_bg {box-sizing:border-box;position: absolute;left: 0;right: 0;top: 80px;background: #FFF;z-index: 0;}
+
+  #header:hover {border-bottom: 1px solid #CCC;background: #FFF;}
+  #header:hover #gnb {color: #000;}
+  #header:hover .search_btn {background-position: -240px -150px;}
+  #header:hover .pc_lang_area {border: 1px solid #CCC;}
+  #header:hover .pc_lang_area li:first-child {color: #099;}
 
   .main_visual {padding-top: 43.22916666%;}
   .quick_wrap li:hover a {background-color: #07a}
@@ -254,7 +265,7 @@ img[src*=transparent] {display: block;width: 0;height: 0;font-size: 0;opacity: 0
   #footer .footer_content {float: left;width: 400px;margin-top: 9px;}
   #footer .footer_content ul {margin-bottom: 26px;}
   #footer .footer_content ul~* {font-size: 14px;}
-  #footer .fam_site_area {float: right;width: 148px;margin-top: 4px;}
+  #footer .fam_site_area {float: right;width: 148px;margin-top: 8px;}
   #footer .fam_site_area span {float: right;width: 148px;line-height: 31px;font-size: 14px;}  
 }
 /* Tablet */
