--- a/css/main.css
+++ b/css/main.css
@@ -45,7 +45,7 @@ img[src*=transparent] {display: block;width: 0;height: 0;font-size: 0;opacity: 0
 #header .mo_nav_on {position: fixed;right: -300px;top: 0;bottom: 0;width: 300px;/*width수정*/background: #FFF;}
 #header .mo_nav_on .mo_gnb_head {padding: 8px 18px 22px;}
 #header .mo_nav_on .mo_gnb_gsLogo {display: block;float: left;width: 56px;height: 30px;}
-#header .mo_nav_on .mo_gnb_close {display: block;float: right;width: 16px;height: 16px;margin-top: 8px;background-image: url(../img/sprite.png);background-position: -240px -398px;}
+#header .mo_nav_on .mo_gnb_close {display: block;float: right;width: 16px;height: 16px;margin-top: 8px;background-image: url(../img/sprite.png);background-position: -120px -200px;background-size: 150px 300px;}
 #header .mo_nav_on #gnb>li>a {position: relative;line-height: 50px;padding: 0 18px;font-size: 18px;}
 #header .mo_nav_on .depth_2 {padding:10px 0 10px 32px;background: #EEE;font-size: 16px;}
 #header .mo_nav_on .depth_2 a {line-height: 40px;}
@@ -55,8 +55,8 @@ img[src*=transparent] {display: block;width: 0;height: 0;font-size: 0;opacity: 0
 #header .mo_nav_on .lang_area li:first-child {padding-right: 16px;color: #099;}
 #header .mo_nav_on .lang_area li:first-child:after {content:'';display: inline-block;width: 1px;height: 10px;margin-left: 14px;background: #CCC;}
 
-.mo_nav_chevron {display: block;position: absolute;top: 50%;right: 18px;transform:translateY(-50%);width: 14px;height: 8px;background-image:url(../img/sprite.png);background-position: -200px -240px;}
-.mo_nav_chevron_on {background-position: -200px -258px;}
+.mo_nav_chevron {display: block;position: absolute;top: 50%;right: 18px;transform:translateY(-50%);width: 15px;height: 8px;background-image:url(../img/sprite.png);background-position: -100px -120px;background-size: 150px 300px;}
+.mo_nav_chevron_on {background-position: -100px -130px;}
 
 /* 검색창 */
 .search_wrap {position: absolute;left: 0;right: 0;border-top: 1px solid #dedede;background: #FFF;}
